--- a/Page3/index.html
+++ b/Page3/index.html
@@ -5,6 +5,16 @@
       href="https://webslides.tv/static/css/webslides.css"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="../Page2/img/favicon.png"
+    />
   </head>
   <body>
     <audio id="birthday_song">
@@ -258,21 +268,104 @@
                 </div>
 
                 <div class="bottomline">
-                  Querida Sabrina,<br /><br /><br /><br />
+                  To the most adorable person I have ever met,<br /><br /><br /><br />
                   <a target="_blank">
-                    Lembre-se da sua juventude, em tudo o que você faz, sorria
-                    mesmo estando triste e seja feliz!
+                    Remember that you are amazing, always smile and be happy.
                   </a>
-                  <br /><br /><br /><br />grande abraço do seu eterno amiguinho
-                  (¯\_(ツ)_/¯) de Campinas
+                  <br /><br />I will always be on your side. All I want is you
+                  to be happy with or without me :)
                 </div>
               </div>
             </div>
           </section>
           <section>
-            <h1>I love you</h1>
+            <div id="test">
+              <span>I</span>
+              <span>L</span>
+              <input type="checkbox" id="switch" checked="checked" />
+              <label for="switch"><i></i></label>
+              <span>VE</span>
+              <span>YOU</span>
+            </div>
+            <div class="checkBoxText">
+              You are the first thing that comes in my mind when I wake up and
+              the last thing I think about before I sleep.<br />
+              You're my favourite dream and the best thing to think or daydream
+              about. Hardly any hour passes by without having your thought.<br />
+              It kinda makes me wonder, if I love you or I live you. Either way,
+              its the most beautiful feeling and I wouldn't like to change it,
+              never in a million years.
+            </div>
+          </section>
+          <section>
+            <div id="canvasText">
+              I can easily say you are my best friend and likely the closest
+              I've ever been to another human being or will ever be, you make me
+              feel home.<br />
+              I am never more at ease then when I'm with you, it's like talking
+              to myself.<br />
+              I'm very thankful that you are in my life and I'm going to keep
+              you around for the rest of my life no matter what it takes.<br />
+              I promise that, no matter what comes up, we will figure and solve
+              it together. We will make it.
+            </div>
             <canvas id="canvas"></canvas>
           </section>
+          <!-- 
+            MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMNX00OOO0KNWMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMW0dc,..    ..':oONMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMNO:.              .,dXMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMXl.                   ;OWMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMK:                      .kWMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMNl                        ,0MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMO.                  ',.    oWMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMWo               .,lOXNo    ;KMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMX:          .,cox0NMMMWd.   .OMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMK,    ..,cokKNMMMMMMMMWXOko..kMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM0' ,dOKXWMMMMMMMMMMMMMMMMM0'.dWMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM0' :NMMMMMMMMMMMMMMMMMMMMWd. oWMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMk. .xWMMMMMMMMMMMMMMMMMMMK;  cNMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMWd.  ,0MMMMMMMMMMMMMMMMMMNc   ,KMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMX:    ;0WMMMMMMMMMMMMMMMXl.   .kMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMWx.     .dXMMMMMMMMMMMMWO;      cXMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMWO'        'dKWMMMMMMWXk:.       .oNMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMNx.           .;looolc;.           .c0WMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMW0:.                                .;kWMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMWXd;.                                  .,o0WMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMXd'                                        .c0WMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMWO,                                            .dNMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMWx.                                               lXMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMNd::::::::::::::::::::::::::::::::::::::::::::::::l0MMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMWKxoolllccccccccccccccccccccccccccccccccccccccccccccccclllod0NMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMWd.                                                          .cKMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMX;                                                            .kMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMN:                                                            'OMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMWo                                                            ;XMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMk.                                                           lWMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMK;                                                          .kMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMWo                           .''.                           ,KMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMk.                         'ONWXl                          lWMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMX;                         .lkkd'                         .kMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMWo                                                        ;KMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMO.                                                       oWMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMX:                                                      .kMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMWd.                                                     ;XMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMM0,                                                    .dWMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMNl                                                    '0MMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMM0;                                                  .xWMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMXkl:;;;,,,,,,,,,,''''''',,'',,,,,,,,,,,,,,;;;;;;;:o0WMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMWOolcc:::::;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;::::ccclxNMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMWNXXXXXXXXXKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKXXXXXXXNWWMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+
+
+
+Look at this beauty <3 : 23283728372 
+           -->
+          <!-- Must have been scary to find this haha: 2932832832 -->
           <section>
             <div class="cont_corazon">
               <svg
@@ -664,6 +757,13 @@
                 </g>
               </svg>
             </div>
+            <div class="buttomText">
+              I wish you a happy, loved and blessed life ahead.<br />
+              Your charm delights me, just talking to you for a few minutes
+              fixes everything.<br />
+              Thank you for being my joy and happiness. You're the most precious
+              thing I've earned in my life and I will keep you like one.
+            </div>
           </section>
           <section>
             <div class="butterflyDiv">
@@ -678,6 +778,10 @@
                 </div>
               </div>
               <div class="shadow"></div>
+            </div>
+            <div class="buttomText butterflyText">
+              You give me butterflies every single time, I hope I do the same
+              and will be able to do the same for years to come.
             </div>
           </section>
           <section>
@@ -706,6 +810,39 @@
                   />
                 </g>
               </svg>
+            </div>
+            <div class="buttomText butterflyText">
+              Once again, happy birthday babe, I love you so much, much more
+              than I could ever express. You are mine and I am yours, will
+              always be. <br />
+              So, this was a little something, I compiled for you. I hope you
+              liked it and I brought a smile on your face on this special day.
+              <br />- Your Babe.
+            </div>
+          </section>
+          <section>
+            <div id="finalForm">
+              <form onsubmit="return false">
+                <p style="color: wheat; text-align: center">
+                  I meant this site for her but for some reason if you are
+                  seeing this, please leave a feedback and don't forget to wish
+                  her a Happiest Birthday <3
+                </p>
+                <input
+                  name="name"
+                  id="formName"
+                  type="text"
+                  class="feedback-input"
+                  placeholder="Name"
+                />
+                <textarea
+                  name="text"
+                  id="formComment"
+                  class="feedback-input"
+                  placeholder="Comment"
+                ></textarea>
+                <input type="submit" value="SUBMIT" id="post-btn2" />
+              </form>
             </div>
           </section>
         </article>
