--- a/index.html
+++ b/index.html
@@ -12,9 +12,46 @@
     />
     <link rel="stylesheet" href="styles/system-fonts.css" media="all" />
     <link rel="stylesheet" href="styles/style.css" media="all" />
+    <link rel="shortcut icon" type="image/png" href="./Page2/img/favicon.png" />
   </head>
 
   <body>
+    <!-- 
+      You really are reading this? Damn girl. 
+
+                  IIIIIIIIIII
+                  IIIIIIIIIII
+                      III
+                      III
+                      III
+                      III
+                      III
+                  IIIIIIIIIII
+                  IIIIIIIIIII
+
+LLL          OOOOOOOO    VV       VV  EEEEEEEEEE
+LLL         OOOOOOOOOO   VV       VV  EEEEEEEEEE
+LLL         OO      OO   VV       VV  EE
+LLL         OO      OO   VV       VV  EE
+LLL         OO      OO   VV       VV  EEEEEEE
+LLL         OO      OO    VV     VV   EE
+LLL         OO      OO     VV   VV    EE
+LLLLLLLLLL  OOOOOOOOOO      VV VV     EEEEEEEEEE
+LLLLLLLLLL   OOOOOOOO         V       EEEEEEEEEE
+
+        YY      YY   OOOOOOOO   UUU    UUU
+         YY    YY   OOOOOOOOOO  UUU    UUU
+          YY  YY    OO      OO  UUU    UUU
+           YYYY     OO      OO  UUU    UUU
+            YY      OO      OO  UUU    UUU
+            YY      OO      OO  UUU    UUU
+            YY      OO      OO  UUU    UUU
+            YY      OOOOOOOOOO  UUUUUUUUUU
+            YY       OOOOOOOO    UUUUUUUU
+
+Easter Egg: 323823283
+
+     -->
     <canvas id="c"></canvas>
     <canvas id="confetti"></canvas>
     <div class="container" id="count">
