--- a/404.html
+++ b/404.html
@@ -31,7 +31,7 @@
       <canvas class="snow" id="snow"></canvas>
       <div class="main-text">
         <h1>Aaah Damn.<br />Did you just visit a random url?</h1>
-        <a class="home-link" href="#"
+        <a class="home-link" href="https://happybirthdaylove.bikramparajuli.com/"
           >This page is missing, like I miss you every second. Go back home?</a
         >
       </div>
