--- a/index.html
+++ b/index.html
@@ -4,7 +4,20 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Happy Birthday!</title>
-
+    <meta property="og:title" content="Wait, you really are sending this?" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="http://happybirthdaylove.bikramparajuli.com/"
+    />
+    <meta
+      property="og:image"
+      content="https://happybirthdaylove.bikramparajuli.com/hbdlove.jpg"
+    />
+    <meta
+      property="og:description"
+      content="I mean you can send this, sure. Either way here is another easter egg: 32762732736"
+    />
     <link
       rel="stylesheet"
       href="styles/flexbox-center-container.css"
