--- a/Page2/index.html
+++ b/Page2/index.html
@@ -147,5 +147,6 @@
   </body>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script type="application/javascript" src="script/main.js"></script>
 </html>
